# palkkakysely

./: .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE  Makefile  chart_utils.py  charts.html  copy_massaged_data.py  data.csv  data.html  data.json  data.xlsx  data_ingest.py  data_utils.py  generate_charts.py  generate_profiling.py  index.html  massage_templates.py  profiling_report.html  pyproject.toml  raw.tsv  raw.xlsx  requirements.in  requirements.txt  ruff.toml
.github/workflows/: build.yml
2021/: charts.html  data.html  data.xlsx  index.html  profiling_report.html  raw.tsv  raw.xlsx
2022/: charts.html  data.csv  data.html  data.json  data.xlsx  index.html  raw.xlsx  style.css
2023/: charts.html  data-vertical.html  data.csv  data.html  data.json  data.xlsx  index.html  raw-en.tsv  raw-en.xlsx  raw-fi.tsv  raw-fi.xlsx
2024/: charts.html  data-vertical.html  data.csv  data.html  data.json  data.xlsx  index.html  raw-en.xlsx  raw-fi.xlsx
2025/: charts.html  charts2.html  data-vertical.html  data.csv  data.html  data.json  data.xlsx  index.html
analysaattori/: asset-manifest.json  index.html  package.json
analysaattori/assets/: index-27bc9a0c.js  index-46d4832a.css  index.9fbb5a89.js  index.d81e5de8.css
analysaattori/public/: index.html
data/: results.tsv  results.xlsx
data/2025/: data.tsv  (+1 more)
pulkka/: chart_utils.py  column_maps.py  config.py  copy_massaged_data.py  data_ingest.py  data_utils.py  generate_charts.py  generate_profiling.py  massage_outputs.py  massage_templates.py
template/: _base.html  _table.html  index.html  style.css
(+22 files in other folders)
